# simple_log

./: .gitignore  CMakeLists.txt  simple_log.hpp
config/: config.hpp
core/: client.cpp  client.hpp  message.hpp  server.hpp  worker.cpp  worker.hpp
core/client/: client_proxy.cpp  client_proxy.hpp
core/client/decorator/: format_decorator.hpp  separator_decorator.cpp  separator_decorator.hpp
include/: simple_log.hpp
include/config/: config.hpp
include/core/: client.hpp  client_proxy.hpp  hash.hpp  message.hpp  queue.hpp  server.hpp
include/core/client/: client_proxy.hpp  decorator.hpp
include/core/client/decorator/: format_decorator.hpp  separator_decorator.hpp
include/sink/: formatter.hpp  semantic_token.hpp  sink.hpp
include/sink/basic_formatter/: json_formatter.hpp  line_formatter.hpp
include/sink/basic_sink/: console_sink.hpp  file_sink.hpp
sink/: formatter.hpp  sink.hpp
sink/basic_sink/: console_sink.hpp  file_sink.hpp
src/core/: client.cpp  client_proxy.cpp  queue.cpp  server.cpp
src/core/client/: client_proxy.cpp
src/core/client/decorator/: format_decorator.cpp
src/sink/: sink.cpp
test/: CMakeLists.txt  main.cpp
